objects/Gateway_Detail__c.object
<CustomObject>
    <description>A custom object for storing payment gateways credentials and details in the EzyCharge.</description>
    <fields>
        <fullName>Authorisation_Code__c</fullName>
        <label>NIU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Key__c</fullName>
        <label>Client Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HostedPayments_PrivateKey__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HostedPayments_PublicKey__c</fullName>
        <label>Hosted Payment Public Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalId>true</externalId>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Optional_Key_1__c</fullName>
        <label>Optional Key 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Page_URL__c</fullName>
        <label>Schedule_Page_URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isSandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <label>Gateway Detail</label>
    <nameField>
        <displayFormat>Gateway-{000}</displayFormat>
        <label>Gateway Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gateway Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>